验证初调、复校有合格记录

--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:YQLaser.UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <Style TargetType="{x:Type TextBox}">
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
