--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YQLaser.UI"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d"        
+        Title="激光刻录" Height="600" Width="800" Loaded="Window_Loaded" Closed="Window_Closed">
+    <Window.Resources>
+        <local:BrushConvert x:Key="converter"></local:BrushConvert>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center">
+            <TextBlock VerticalAlignment="Center">刻录机状态：</TextBlock>
+            <Ellipse Width="30" Height="30" Fill="{Binding Path=LaserConnected, Converter={StaticResource converter}}"/>
+            <Button Name="btnConnect" Content="连接刻录机" Width="80" Command="{Binding Path=ConnectCmd}"></Button>
+            <Button Name="btnSelectFile" Content="选择MSN文件" Width="80" Command="{Binding Path=SelectMSNFileCmd}" Margin="20 0 0 0"></Button>
+
+        </StackPanel>
+        <TextBlock HorizontalAlignment="Left" Margin="29,14,0,0" Grid.Row="1" TextWrapping="Wrap" Text="厂内码：" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="82,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=CurrFactoryCode,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="34,54,0,0" Grid.Row="1" TextWrapping="Wrap" Text="GUID：" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="82,50,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=CurrGUID,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="37,104,0,0" Grid.Row="1" TextWrapping="Wrap" Text="MSN：" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="82,100,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=CurrMSN,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="13,154,0,0" Grid.Row="1" TextWrapping="Wrap" Text="上次MSN：" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="82,150,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=LastMSN,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="17,204,0,0" Grid.Row="1" TextWrapping="Wrap" Text="刻录结果：" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Height="23" Margin="82,200,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=CurrCarveRlt}" VerticalAlignment="Top" Width="120"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="29,254,0,0" Grid.Row="1" TextWrapping="Wrap" Text="制令号：" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="82,250,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=TaskData.WORKORDER_CODE}" VerticalAlignment="Top" Width="120"/>
+
+
+        <RichTextBox Name="rtxtMsg" HorizontalAlignment="Left" Height="428" VerticalAlignment="Top" Width="556" Margin="226,10,0,0" Grid.Row="1">
+        </RichTextBox>
     </Grid>
 </Window>
